--- a/src/main/resources/templates/c_head.html
+++ b/src/main/resources/templates/c_head.html
@@ -19,6 +19,7 @@
     <!--static css-->
     <link href="/css/reset.css" rel="stylesheet" />
     <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/landing.css" rel="stylesheet" />
 
     <!--G fonts-->
     <link href="https://fonts.googleapis.com/css?family=Rubik|Viga" rel="stylesheet">
