--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
     <head th:replace="c_head :: head"></head>
 
-
+    <!--<div class="modal" th:replace="landing :: landing"></div>-->
 
     <body>
 
@@ -46,16 +46,8 @@
 
         <!--<div id="map"></div>-->
 
-<section id="groups_readout">
-    <div th:replace="c_teams :: teams"></div>
-    <div th:replace="c_teams :: teams"></div>
-    <div th:replace="c_teams :: teams"></div>
-    <div th:replace="c_teams :: teams"></div>
-    <div th:replace="c_teams :: teams"></div>
-    <div th:replace="c_teams :: teams"></div>
     <div th:replace="c_teams :: teams"></div>
 
-</section>
 
         <!--<div class="transparent_body">-->
             <!--<i class="fas fa-snowboarding"></i>-->
@@ -69,6 +61,7 @@
         <!--</div>-->
 
     </body>
+
 
 
 
