--- a/src/main/resources/templates/c_nav.html
+++ b/src/main/resources/templates/c_nav.html
@@ -3,9 +3,11 @@
 
 <nav th:fragment="nav">
 
-        <div><a href="/login">Login</a></div>
-        <div><a href="/signup">Sign-Up</a></div>
-        <div><a href="/myProfile">Profile</a></div>
+        <div sec:authorize="isAnonymous()"><a href="/login">Login</a></div>
+        <div sec:authorize="isAnonymous()"><a href="/signup">Sign-Up</a></div>
+        <div sec:authorize="isAuthenticated()" th:text="${#authentication.principal.username} + ' - '"></div>
+        <div sec:authorize="isAuthenticated()"><a href="/myProfile">Profile</a></div>
+        <div sec:authorize="isAuthenticated()"><a href="/perform_logout">Logout</a></div>
 
 </nav>
 
