removed unnecessary fragments

--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -7,7 +7,7 @@
 
         <header th:replace="c_header :: header"></header>
 
-        <header th:replace="c_nav_m :: nav_m"></header>
+        <!--<header th:replace="c_nav_m :: nav_m"></header>-->
 
         <!--Basic group information-->
         <div>
