--- a/src/main/resources/templates/teamForm.html
+++ b/src/main/resources/templates/teamForm.html
@@ -7,7 +7,7 @@
 
         <header th:replace="c_header :: header"></header>
 
-        <header th:replace="c_nav :: v_nav"></header>
+        <!--<header th:replace="c_nav :: v_nav"></header>-->
 
 
         <form th:action="'/resorts/' + ${param.resortId}" method="post">
