--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -17,8 +17,28 @@ div, section {
     /* border: thin red solid; */
 }
 
-::-webkit-scrollbar {
-    width: 10px;
+a:link{
+  font-family: 'Viga', sans-serif;
+  text-decoration: none;
+  color:#FFFFFF;
+}
+
+a:visited{
+  font-family: 'Viga', sans-serif;
+  text-decoration: none;
+  color:#FFFFFF;
+}
+
+a:hover{
+  font-family: 'Viga', sans-serif;
+  text-decoration: none;
+  color:#7F7979;
+}
+
+a:active{
+  font-family: 'Viga', sans-serif;
+  text-decoration: none;
+  color:#7F7979
 }
 
 #landing{
@@ -153,6 +173,10 @@ footer {
 
     header > nav > div > a {
          display: none;
+    }
+
+    .top_name{
+            display:none;
     }
 
     #teams{
@@ -338,6 +362,10 @@ footer {
         height: 150px;
         background:rgba(0, 0, 0, 0.7);
         display: inline-block;
+    }
+    #create_team{
+        position: relative;
+        top: 370px;
     }
 
     .shades{
