--- a/src/main/resources/templates/my_profile.html
+++ b/src/main/resources/templates/my_profile.html
@@ -9,7 +9,7 @@
 
     <header th:replace="c_header :: header"></header>
 
-    <main>
+    <main class="shades">
         <h1 th:text="${'PROFILE: ' + user.username}"></h1>
 
         <h2 th:text="${'NAME: ' + user.getFirstName() + ' ' + user.getLastName()}"></h2>
