--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -7,22 +7,22 @@
 
     <header th:replace="c_header :: header"></header>
 
-    <main>
+    <main class="shades">
         <form th:action="(${param.teamId}?'/signup?teamId='+${param.teamId} : '/signup')" method="post">
-            <label for="username">Username:</label>
-            <input type="text" name="username" id="username">
+            <label for="username">Username:</label><br>
+            <input type="text" name="username" id="username"><br>
 
-            <label for="password">Password:</label>
-            <input type="password" name="password" id="password">
+            <label for="password">Password:</label><br>
+            <input type="password" name="password" id="password"><br>
 
-            <label for="bio">Bio:</label>
-            <input type="text" name="bio" id="bio">
+            <label for="bio">Bio:</label><br>
+            <input type="text" name="bio" id="bio"><br>
 
-            <label for="firstName">First Name:</label>
-            <input type="text" name="firstName" id="firstName">
+            <label for="firstName">First Name:</label><br>
+            <input type="text" name="firstName" id="firstName"><br>
 
-            <label for="lastName">Last Name:</label>
-            <input type="text" name="lastName" id="lastName">
+            <label for="lastName">Last Name:</label><br>
+            <input type="text" name="lastName" id="lastName"><br>
 
             <input type="submit" name="Sign-Up">
         </form>
