--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 
             <div id="report_container">
                 <iframe id="o80696" height="300" border="0" frameborder="0" scrolling="no" th:src="'https://www.onthesnow.com/widget/snow?resort=' + ${locations[0].widgetId} + '&color=b'"></iframe>
-                <p id="add_tag"><a th:href="${locations[0].otsUrl}" target="_blank">Report from OnTheSnow.com</a></p>
+                <p id="add_tag"><a th:href="${locations[0].otsUrl}" target="_blank"></a></p>
             </div>
 
 
