--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -10,7 +10,7 @@
         <!--<header th:replace="c_nav_m :: nav_m"></header>-->
 
         <!--Basic group information-->
-        <div>
+        <div class="shades">
             <span th:text="'Name:' + ${team}"></span>
             <span th:text="'Description:' + ${team.description}"></span>
             <span th:text="'Difficulty:' + ${team.difficulty}"></span>
