changed background image to smaller file

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -71,7 +71,7 @@ landing_span{
 }
 
 body {
-    background: url("/img/sti-H-20.jpg") no-repeat center center fixed;
+    background: url("/img/sti-H.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
