--- a/src/main/resources/templates/teamForm.html
+++ b/src/main/resources/templates/teamForm.html
@@ -10,17 +10,17 @@
         <!--<header th:replace="c_nav :: v_nav"></header>-->
 
 
-        <form th:action="'/resorts/' + ${param.resortId}" method="post">
-            <label>Team Name: <input name="name"></label>
-            <label>Description: <input name="description"></label>
+        <form class="shades" th:action="'/resorts/' + ${param.resortId}" method="post">
+            <label>Team Name: <input name="name"></label><br>
+            <label>Description: <input name="description"></label><br>
             <label>Difficulty: <select name="difficulty">
                 <option value="1">Green Circle</option>
                 <option value="2">Blue Square</option>
                 <option value="3">Black Diamond</option>
                 <option value="4">Double Black Diamond</option>
-            </select> </label>
-            <label>Capacity: <input name="capacity" type="number" min="2"></label>
-            <label>Date Going: <input name="dateGoing" type="datetime-local"></label>
+            </select> </label><br>
+            <label>Capacity: <input name="capacity" type="number" min="2"></label><br>
+            <label>Date Going: <input name="dateGoing" type="datetime-local"></label><br>
             <!--<label>Time: <input type="time" name="timeGoing"></label>-->
             <!--<label><input name="name"></label>-->
             <input type="submit">
